app/assets/stylesheets/application.css.sass
@import foundation

/* Foundation v2.2.1 http://foundation.zurb.com
/* Artfully masterminded by ZURB

/* --------------------------------------------------
 *   Table of Contents
 *-----------------------------------------------------
 *:: Shared Styles
 *:: Header Styles
 *:: About/Events Styles
 *:: Contact Styles
 *:: Sponsors Styles
 *:: Footer Styles
 *:: Fonts

/* -----------------------------------------
 *   Shared Styles
 *-----------------------------------------

body
  background: image-url('light-bg.jpg')
  font-family: 'Cabin', tahoma, sans serif
  font-size: 18px

.container
  padding: 60px 0

.containerVideo
  padding: 60px 0

header, #about, #sponsors
  background: image-url('dark-bg.jpg')

h1, h2, h3, h4, h5
  color: #fff
  font-family: 'BebasNeueRegular', arial, sans serif
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)

h2
  font-size: 2.61em

h3
  font-size: 1.7em

h4
  font-size: .83em
  font-size: 1.33em

p
  color: #fff
  font-size: 1em

/* -----------------------------------------
 *   Header Styles
 *-----------------------------------------

header
  background: image-url('nav.png') repeat-x
  height: 46px
  position: fixed
  width: 100%
  z-index: 99999

#logo
  display: none

nav
  float: left
  ul
    margin: 10px 0
    li
      display: inline
      font-family: 'BebasNeueRegular', arial, sans serif
      font-size: 1.11em
      margin-right: 15px
      a
        color: #fff
        text0-decoration: none
        &:hover
          color: #EDECE4

#social
  background: #a3a194
  float: right
  height: 100%
  margin: 0
  padding: 10px
  li
    color: #fff
    float: right
    font-style: italic
    font-weight: 400
    font-size: .72em
    margin: 0 5px
    a
      display: block
    &.twitter
      background: image-url('main.png') -71px -158px no-repeat
      display: block
      height: 15px
      margin-top: 3px
      text-indent: -9999px
      width: 23px
      &:hover
        background: image-url('main.png') -71px -183px no-repeat
    &.facebook
      background: image-url('main.png') -40px -156px no-repeat
      display: block
      height: 20px
      text-indent: -9999px
      width: 9px
      &:hover
        background: image-url('main.png') -40px -181px no-repeat

/* -----------------------------------------
 *   Home Styles
 *-----------------------------------------

#home
  background: image-url('map.png') center no-repeat
  .container.row
    background: image-url('skyline.png') bottom right no-repeat
  h1
    background: image-url('main.png') -24px -23px no-repeat
    height: 101px
    text-indent: -9999px
    width: 404px
  .container
    padding: 124px 0
    .eight.columns
      p
        color: #363636
        font-size: 1.8em
        font-style: italic
        margin-bottom: 40px
      a
        background: image-url('btn-arrow.png') 9px 9px no-repeat #a12f2e
        color: #fff
        font-family: 'BebasNeueRegular', arial, sans serif
        font-size: 1.2em
        padding: 10px 15px 10px 35px
        &:hover
          background: image-url('btn-arrow.png') 9px 9px no-repeat #781615
  #next
    background: image-url('next-bg.png')
    &:before
      border-left: 19px solid transparent
      border-top: 18px solid rgba(140, 137, 121, 0.7)
      border-right: 19px solid transparent
      content: ""
      height: 0
      left: 50%
      margin-left: -19px
      position: absolute
      bottom: -18px
      width: 0
    section
      margin: 15px auto
      width: 90%
    p, h3
      margin: 0
      text-shadow: none
    p
      color: #edece4
      font-size: 1.11em
    a
      background: image-url('pin.png') left center no-repeat
      color: #f7cd0b
      font-size: .8em
      font-weight: 700
      padding-left: 20px
      &:hover
        color: #58554a
    article
      margin-bottom: 15px
      &#location
        margin-bottom: 5px


/* -----------------------------------------
 *   About/Events Styles
 *-----------------------------------------

#tweet
  background: image-url('dark-overlay-bg.jpg')
  font-size: 1em
  padding: 20px
  & > a
    background: image-url('main.png') -107px -148px no-repeat
    display: block
    float: left
    height: 38px
    margin-top: 23px
    text-indent: -999px
    width: 61px
  h4
    color: #42c8f4
    font-size: .83em
    padding-left: 80px
  p
    padding-left: 80px

#events
  article
    background: #58554a
    margin-bottom: 15px
    overflow: hidden
  .date
    background: #ba1815
    background: -moz-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
    background: -webkit-gradient(linear, left bottom, right top, color-stop(50%, #ba1815), color-stop(51%, #9f1d19))
    background: -webkit-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
    background: -o-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
    background: -ms-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
    background: linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
    float: left
    margin-right: 20px
    width: 90px
  h1
    font-size: 1.38em
    text-align: center
    margin: 15px 0 0 0
    span
      display: block
      font-size: 2.22em
      margin-top: -14px
  article
    p
      font-size: .75em
      margin: 15px 0 7px 0
    a
      color: #F7CD0B
      font-size: .8em
      &:hover
        color: #F7CD0B
        text-decoration: underline

/* -----------------------------------------
 *   Contact Us Styles
 *-----------------------------------------

#contact
  h2
    color: #1e1e1e
    font-family: 'BebasNeueRegular', arial, sans serif
    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8)
  p
    color: #1e1e1e
    width: 60%
  form
    padding: 20px 0

#left-contact input
  background: image-url('light-overlay-bg.jpg')
  border: none
  color: #5d5b52
  font-family: 'BebasNeueRegular', arial, sans serif
  font-size: 1.1em
  padding: 15px 15px
  width: 100%

#contact textarea
  background: image-url('light-overlay-bg.jpg')
  border: none
  color: #5d5b52
  font-family: 'BebasNeueRegular', arial, sans serif
  font-size: 1.1em
  min-height: 210px
  padding: 15px 15px
  width: 100%

input::-webkit-input-placeholder, textarea::-webkit-input-placeholder
  color: #636363

input:-moz-placeholder, textarea:-moz-placeholder
  color: #636363

#submit
  background: #ba1815
  background: -moz-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
  background: -webkit-gradient(linear, left bottom, right top, color-stop(50%, #ba1815), color-stop(51%, #9f1d19))
  background: -webkit-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
  background: -o-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
  background: -ms-linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
  background: linear-gradient(45deg, #ba1815 50%, #9f1d19 51%)
  cursor: pointer
  display: block
  height: 70px
  width: 70px
  border: none
  float: right
  margin-top: -97px
  position: relative
  text-indent: -9999px
  input
    background: image-url('main.png') -208px -156px no-repeat
    cursor: pointer
    display: block
    height: 30px
    width: 42px
    border: none
    float: right
    text-indent: -9999px
    margin: 20px 12px 0

\::-webkit-input-placeholder, input:-moz-placeholder
  color: #5d5b52

/* -----------------------------------------
 *   Sponsors Styles
 *-----------------------------------------

#sponsors
  .sponsors
    padding: 15px 0
  article
    background: image-url('dark-overlay-bg.jpg')
    min-height: 300px
    padding-bottom: 15px
    text-align: center
    p
      font-size: .9em
      margin: 0 auto
      width: 80%
    a
      font-size: .8em
      font-weight: bold
      color: #393627
      display: block
      margin: 5px auto 0
      &:hover
        text-decoration: underline

#neo .logo
  background: image-url('neo-logo.png') no-repeat
  display: block
  height: 66px
  margin: 77px auto 25px
  text-indent: -9999px
  width: 204px

#engine-yard .logo
  background: image-url('main.png') -345px -146px no-repeat
  display: block
  height: 122px
  margin: 25px auto 25px
  text-indent: -9999px
  width: 73px

#gaslight .logo
  background: image-url('gaslight-logo.png') no-repeat
  background-size: 100%
  display: block
  height: 150px
  margin: 25px auto 25px
  text-indent: -9999px
  width: 154px
  z-index: 99

.become-a-sponsor
  background: #58554a
  color: #EDECE4
  float: right
  font-size: .9em
  margin-top: -53px
  padding: 10px 12px
  font-style: italic
  &:hover
    background: #423f35
    color: #EDECE4


.url
  font-size: 12px

/* -----------------------------------------
 *   Video
 *-----------------------------------------


#video
  h2
    color: #1e1e1e
    font-family: 'BebasNeueRegular', arial, sans serif
    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8)
  p
    color: #1e1e1e
    width: 80%
  form
    padding: 20px 0

.videos
  margin: 0

.video
  @extend .six, .columns, .flex-video, .widescreen, .vimeo
  padding-bottom: 27%
/* -----------------------------------------
 *   Past Events Styles
 * -----------------------------------------
#past-events
  @extend #about
  padding-bottom: 0

.event
  @extend .row
/* -----------------------------------------
 *   Speaker Styles
 * -----------------------------------------
.speakers
  //@extend .row

.speaker
  @extend .row
  margin-bottom: 2em

.speaker-headshot
  @extend .two, .columns
  width: 128px

.speaker img
  width: 100%

.speaker-text
  @extend .ten, .columns

.speaker-name

.speaker-bio

/* -----------------------------------------
 *   Footer Styles
 *-----------------------------------------

footer
  .container
    padding: 20px 0
  h5
    float: left
    font-size: 1.2em
    a
      color: #58554a
      text-shadow: none
      &:hover
        color: #A12F2E
  #top
    background: image-url('main.png') -272px -152px no-repeat
    display: block
    float: right
    height: 44px
    text-indent: -9999px
    width: 44px
    &:hover
      background: image-url('main.png') -272px -196px no-repeat

/* -----------------------------------------
 *   Fonts
 *-----------------------------------------

@font-face
  font-family: 'BebasNeueRegular'
  src: url('../assets/BebasNeue-webfont.eot')
  src: url('../assets/BebasNeue-webfont.eot?#iefix') format("embedded-opentype"), url('../assets/BebasNeue-webfont.woff') format("woff"), url('../assets/BebasNeue-webfont.ttf') format("truetype"), url('../assets/BebasNeue-webfont.svg#BebasNeueRegular') format("svg")
  font-weight: normal
  font-style: normal

